Bugfix: Switched to dvh to prevent things being cut off due to address bar etc. on mobile devices

--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  /* Switch to dynamic view height to attempt to fix things being cut off on mobile */
+  height: 100dvh;
   background-color: #2b2b2b;
   font-family: var(--font-display);
   overflow: hidden;
@@ -33,7 +34,7 @@ body {
 /** === Game Container & Layering === */
 #game-container {
   position: relative;
-  height: 100vh; /* Always fill the screen top-to-bottom */
+  height: 100dvh; /* Always fill the screen top-to-bottom */
   aspect-ratio: 9 / 16; /* Maintain that vertical phone shape */
   max-width: 100vw; /* On mobile, this will make it fill the width. On desktop, it prevents the game from becoming wider than the screen. */
   background-color: var(--bg-dark);
